--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
 
     </title>
 </head>
+
 <body>
-    <h1>Welcome to Black Goose Bistro</h1>
-    <p>We serve deleciuos foods!</p>
-    
+    <header>
+        <img src="img/blackgoose.png" alt="">
+        <h1>Black Goose Bistro</h1>
+    </header>
+    <main>
+        <section>
+            <h2>The Resturant</h2>
+            <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed atmosphere. The menu changes regulary to highlight the freshest local ingredients.</p>
+            <br>
+            <h2>Catering</h2>
+            <p>You have fun. We'll handle the cooking. Black Goose Catering can handle events from snacks for a meetup to elegant corporate fundraisers.</p>
+            <br>
+            <h2>Location and Hours</h2>
+            <p>Seekonk, Massachusetts;</p>
+            <p>Monday through Thursday 11am to 9pm;</p>
+            <p>Monday through Thursday 11am to 9pm;</p>
+    </section>
+    <footer>
+    <hr>
+    </footer>
+</main>
 </body>
 </html>
